--- a/src/main/java/UI/Component/DoanhThuJDialog.form
+++ b/src/main/java/UI/Component/DoanhThuJDialog.form
@@ -71,11 +71,11 @@
         <DimensionLayout dim="1">
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="0" attributes="0">
-                  <EmptySpace max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="1" attributes="0">
-                      <Component id="pnSoLuong" min="-2" max="-2" attributes="0"/>
-                      <Component id="pnDoanhThu" min="-2" max="-2" attributes="0"/>
-                      <Component id="pnTongKhachHang" min="-2" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="15" max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="1" max="-2" attributes="0">
+                      <Component id="pnSoLuong" max="32767" attributes="0"/>
+                      <Component id="pnTongKhachHang" max="32767" attributes="0"/>
+                      <Component id="pnDoanhThu" alignment="1" max="32767" attributes="0"/>
                   </Group>
                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
                   <Component id="jPanel5" min="-2" max="-2" attributes="0"/>
@@ -182,7 +182,7 @@
                       <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Component id="lblDoanhThu" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace min="0" pref="55" max="32767" attributes="0"/>
+                      <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
